load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(license = "hs-msgpack")

haskell_library(
    name = "hs-msgpack-types",
    srcs = glob(["src/**/*.*hs"]),
    src_strip_prefix = "src",
    version = "0.3.3",
    visibility = ["//visibility:public"],
    deps = [
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("containers"),
        hazel_library("deepseq"),
        hazel_library("hashable"),
        hazel_library("monad-validate"),
        hazel_library("text"),
        hazel_library("transformers"),
        hazel_library("unordered-containers"),
        hazel_library("vector"),
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    compiler_flags = ["-Wno-unused-imports"],
    deps = [
        ":hs-msgpack-types",
        hazel_library("QuickCheck"),
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("containers"),
        hazel_library("deepseq"),
        hazel_library("generic-arbitrary"),
        hazel_library("hashable"),
        hazel_library("hspec"),
        hazel_library("monad-validate"),
        hazel_library("quickcheck-instances"),
        hazel_library("text"),
        hazel_library("unordered-containers"),
        hazel_library("vector"),
    ],
)
